--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 # Core Data Processing
-pandas==2.1.4
-numpy==1.26.2
+pandas>=2.1.4
+numpy>=1.26.2
 
 # Machine Learning
-scikit-learn==1.3.2
-xgboost==2.0.3
-scipy==1.11.4
+scikit-learn>=1.3.2
+xgboost>=2.0.3
+scipy>=1.11.4
 
 # Dashboard and Visualization
-streamlit==1.29.0
-plotly==5.18.0
-altair==5.2.0
+streamlit>=1.29.0
+plotly>=5.18.0
+altair>=5.2.0
 
 # Utilities
-python-dateutil==2.8.2
-pytz==2023.3
+python-dateutil>=2.8.2
+pytz>=2023.3
