--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ streamlit>=1.29.0
 plotly>=5.18.0
 altair>=5.2.0
 
+# PDF Generation
+reportlab>=4.0.0
+
 # Utilities
 python-dateutil>=2.8.2
 pytz>=2023.3
