--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,10 @@ altair>=5.2.0
 # PDF Generation
 reportlab>=4.0.0
 
+# Real-time Communication
+websockets>=12.0
+aiohttp>=3.9.0
+
 # Utilities
 python-dateutil>=2.8.2
 pytz>=2023.3
